--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "todo-app-with-css",
+  "name": "Time_Series_with_D3",
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
